# dataTools

./: .gitignore  C_SF6_age.py  C_curvefit.py  C_plot.py  C_read.py  C_tools.py  C_trop_ol.py  C_write.py  GUIplotting.py  INTtps_variables.xlsx  OG_data.py  Panoply.exe - Shortcut.lnk  README.md  Untitled-1.ipynb  __init__.py  aux_fctns.py  baseline.py  binned_plots.ipynb  clams_interpolation.py  coordinates.csv  coordinates_BACKUP.csv  coordinates_V02.csv  data.py  data_classes.py  detrend.py  dictionaries.py  eqlat_plots.py  filter_outliers.py  get_data.py  ghg_header_date_error_search.py  global_data.py  gradients.py  groundbased.py  instr_vars_per_ID.csv  instruments.csv  ipython.html  lags.py  local_data.py  main.py  minimal_examples.ipynb  (+12 more)
Caribic_Python_TS/: CARIBIC_Main.py  C_TPChange.py  C_filter.py
data/: BinnedData.py  CampaignData.py  Caribic.py  EMAC.py  Model.py  Mozart.py  O3_climatology_Hohenpeissenberg_for_H_rel_TP.csv  Untitled-1.ipynb  __init__.py  _campaigns.py  _caribic.py  _global.py  _local.py  _model.py  data_getter.py  local.py  mixin_analysis.py  mixin_binning.py  mixin_model_data.py  mixin_selection.py  mixin_tropopause.py  read_hp_sonde.py  tests_dataTools.ipynb  tropopause.py
misc_data/: INTtpc_20150115_492_GRU_MUC_10s_V02.txt  INTtpc_20180516_547_MEX_MUC_10s_V05.txt  INTtpc_20190501_569_PVG_MUC_10s_V02.txt  INTtpc_20190501_569_PVG_MUC_10s_V03.txt  TPChange.lnk  _Caribic2data.lnk  _s4d_CARIBIC.lnk  atom_data_dict.pkl  b47_cryosampler_GCMS_ECD_PIC_w_cat.csv  emac_df.pkl  emac_ds.pkl  emac_tp.nc  misc_tests.py  s4d_ds.pkl  start_dates_per_flight.pkl  tpdata_df_sorted.pkl  variables_per_instrumet.pkl
notebooks/: minimal_examples.ipynb  weighted_binning.ipynb
other/: SF6_GhOST_SQL_read_write.py  SF6_GhOST_mission_merge.py  SF6_GhOST_resample.py  SOUTHTRAC_ECD.csv  SOUTHTRAC_MS.csv  binning_mixin.py  clams_interpolation.py  eqlat_.py  fixing_cols_latlon.py  get_data.py  global_data.py  local_data.py  main.py  n2o_filter.py  pyfuppes_o3_file_tools.py  sql_reader.py  strat_filter_on_caribic_data.py
plot/: __init__.py  binsubs.py  create_figure.py  cross_TP_gradient.py  data.py  data_characterisation.py  eqlat.py  gradients.py  ipython.html  (+7 more)
(+51 files in other folders)
