[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataTools"
version = "1.0.0"
description = "Useful tools for analysis atmospheric measurement data. "
readme = "README.md"
requires-python = ">=3.6"
authors = [
  { name = "SophieBauchinger", email = "bauchinger@iau.uni-frankfurt.de" },
]
license = { text = "GNU General Public License v3 (GPLv3)" }

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]

dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "scipy",
  "metpy"
]

[project.urls]
Homepage = "https://github.com/SophieBauchinger/dataTools.git"
